<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/color_background_gradient">

    <ImageView
        android:contentDescription="@string/tag_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@mipmap/sorteio"
        android:layout_marginTop="8dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="8dp"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/v1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inicio"
            android:inputType="numberDecimal"
            android:textColor="@color/edit"
            android:textSize="20sp"
            android:layout_margin="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/v2_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fim"
            android:inputType="numberDecimal"
            android:textColor="@color/edit"
            android:textSize="20sp"
            android:layout_margin="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnResultado"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:background="@drawable/color_gradient"
        android:text="@string/sortear"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="5dp"
        android:text="@string/res"
        android:fontFamily="serif"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="45sp"
        android:background="@drawable/color_bottom_gradient"
        android:textColor="#fff"/>
</LinearLayout>