<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/color_background_gradient"
    tools:context=".SplashActivity">

    <ImageView
        android:contentDescription="@string/tag_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@mipmap/sorteio"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:contentDescription="@string/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:src="@mipmap/logo"
        android:layout_marginTop="15dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/saudacao"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="serif"/>
</LinearLayout>